Update lsp vars

--- a/custom.org
+++ b/custom.org
@@ -1097,10 +1097,10 @@ function.
 
       ;; Officially supported settings
       ;; https://github.com/golang/tools/blob/master/gopls/doc/settings.md#officially-supported
-      (setq lsp-go-link-target "pkg.go.dev"
-            lsp-go-use-placeholders nil
-            lsp-eldoc-render-all nil
-            lsp-signature-doc-lines 20)
+      (setq-default lsp-go-link-target "pkg.go.dev"
+                    lsp-go-use-placeholders nil
+                    lsp-eldoc-render-all nil
+                    lsp-signature-doc-lines 20)
 
       ;; Experimental settings
       ;; https://github.com/golang/tools/blob/master/gopls/doc/settings.md#experimental
