--- a/custom.org
+++ b/custom.org
@@ -1116,8 +1116,7 @@ function.
       :preface
       (defun k20e/go-mode ()
         (message "hey, go-mode!"))
-      :hook ((flycheck-mode . flycheck-golangci-lint-setup)
-             (go-mode . k20e/go-mode)
+      :hook ((go-mode . k20e/go-mode)
              (go-mode . (lambda ()
                           (let ((gopath (string-trim (shell-command-to-string (string-join `(,(executable-find "go") "env" "GOPATH") " "))))
                                 (goroot (string-trim (shell-command-to-string (string-join `(,(executable-find "go") "env" "GOROOT") " ")))))
