Require dash for lsp

--- a/custom.org
+++ b/custom.org
@@ -1075,6 +1075,9 @@ function.
             company-show-numbers t
             company-tooltip-align-annotations t))
 
+    (use-package dash
+      :ensure t)
+
     (use-package flycheck
       :ensure t)
 
