Fixup org-mode hook

--- a/custom.org
+++ b/custom.org
@@ -1589,19 +1589,19 @@ function.
       (org-todo ((t (:inherit (shadow fixed-pitch)))))
       (org-verbatim ((t (:inherit (shadow fixed-pitch)))))
       :hook
-      ((org . auto-fill)
-       (org . prettify-symbols)
-       (org . (lambda ()
-                (visual-line-mode 0)        ; TODO how to do this w/ :hook?
-                (variable-pitch-mode)       ; Apparently this isn't a "real" mode for use-package :hook?
+      ((org-mode . auto-fill)
+       (org-mode . prettify-symbols)
+       (org-mode . (lambda ()
+                     (visual-line-mode 0)   ; TODO how to do this w/ :hook?
+                     (variable-pitch-mode)  ; Apparently this isn't a "real" mode for use-package :hook?
 
-                ;; Replace '-' w/ fancy dot for bulleted lists
-                (font-lock-add-keywords
-                 'org-mode
-                 '(("^ *\\([-]\\) "
-                    (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
+                     ;; Replace '-' w/ fancy dot for bulleted lists
+                     (font-lock-add-keywords
+                      'org-mode
+                      '(("^ *\\([-]\\) "
+                         (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
 
-                )))
+                     )))
       :config
       (setq org-default-notes-file (expand-file-name "notes.org" org-directory)
             org-directory (expand-file-name "org" k20e/google-drive-directory)
